# chess

./: .gitignore  CMakeLists.txt  README.md  build.cmd  run.cmd
src/: Application.cpp  Application.h  CMakeLists.txt  GameGlobal.h  Logger.cpp  Logger.h  main_macos.cpp  main_win32.cpp
src/classes/: Bit.cpp  Bit.h  BitHolder.cpp  BitHolder.h  Chess.cpp  Chess.h  ChessSquare.cpp  ChessSquare.h  Entity.h  Evaluate.h  Game.cpp  Game.h  Player.h  RockPaperScissors.cpp  RockPaperScissors.h  Sprite.cpp  Sprite.h  Square.cpp  Square.h  Turn.h  stb_image.h
